--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-project",
+  "name": "task",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "watson.zeng <watson.zeng@corp.to8to.com>",
