--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "element-ui": "^2.15.6",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-js-grid": "^1.0.1",
+    "vue-layer": "^1.2.5",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.23.2"
   },
