--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.15.6",
+    "file-saver": "^2.0.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-js-grid": "^1.0.1",
