--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "mavon-editor": "^2.10.4",
+    "v-viewer": "^1.6.4",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
     "vue-js-grid": "^1.0.1",
     "vue-layer": "^1.2.5",
+    "vue-preview": "^1.1.3",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.23.2"
   },
