--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "benz-amr-recorder": "^1.1.5",
     "element-ui": "^2.15.6",
     "file-saver": "^2.0.5",
     "mavon-editor": "^2.10.4",
